--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,8 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v1
         with:
           role-to-assume: arn:aws:iam::${{secrets.AWS_S3_ACCOUNT_ID}}:role/portfolio_cicd
-          role-duration-seconds: 1200  # Adjust the duration as needed
+          role-duration-seconds: 1200 # Adjust the duration as needed
+          aws-region: ap-southeast-2
 
       - name: Deploy static site to S3 bucket
         run: |
