--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,10 @@ on:
 env:
   AWS_REGION : ap-southeast-2
 
+permissions:
+  id-token: write
+  contents: read
+  
 jobs:
   deploy-prod:
     runs-on: ubuntu-latest
